{
  "version": 4,
  "terraform_version": "1.13.1",
  "serial": 128,
  "lineage": "cf540b85-4f09-c80b-3e92-b8051708608e",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "app_server",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "ami": "ami-053b0d53c279acc90",
            "arn": "arn:aws:ec2:us-east-1:442729101074:instance/i-02c1b229c3bc36b84",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "CloudReactViteSpringApp-ssm-instance-profile",
            "id": "i-02c1b229c3bc36b84",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-003339f49b47c2d7d"
              }
            ],
            "primary_network_interface_id": "eni-003339f49b47c2d7d",
            "private_dns": "ip-10-0-1-250.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.250",
            "public_dns": "ec2-13-223-53-152.compute-1.amazonaws.com",
            "public_ip": "13.223.53.152",
            "region": "us-east-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-09770c4b471cb463c",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0b47815e77b79799e",
            "tags": {
              "Name": "CloudReactViteSpringApp-server"
            },
            "tags_all": {
              "Name": "CloudReactViteSpringApp-server"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-069bbce724de555c2"
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "442729101074",
            "id": "i-02c1b229c3bc36b84",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_iam_instance_profile.ec2_ssm_instance_profile",
            "aws_iam_role.ec2_ssm_role",
            "aws_security_group.app_sg",
            "aws_subnet.public_subnet",
            "aws_vpc.app_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "app_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:442729101074:internet-gateway/igw-0a73343344e270a5f",
            "id": "igw-0a73343344e270a5f",
            "owner_id": "442729101074",
            "region": "us-east-1",
            "tags": {
              "Name": "CloudReactViteSpringApp-igw"
            },
            "tags_all": {
              "Name": "CloudReactViteSpringApp-igw"
            },
            "vpc_id": "vpc-07d5633df6133eb2e"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.app_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:442729101074:route-table/rtb-09d51b0103b4f0e68",
            "id": "rtb-09d51b0103b4f0e68",
            "owner_id": "442729101074",
            "propagating_vgws": [],
            "region": "us-east-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0a73343344e270a5f",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "CloudReactViteSpringApp-public-rt"
            },
            "tags_all": {
              "Name": "CloudReactViteSpringApp-public-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-07d5633df6133eb2e"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "442729101074",
            "id": "rtb-09d51b0103b4f0e68",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_internet_gateway.app_igw",
            "aws_vpc.app_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_rt_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-048ce6ff0327bbfc7",
            "region": "us-east-1",
            "route_table_id": "rtb-09d51b0103b4f0e68",
            "subnet_id": "subnet-0b47815e77b79799e"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.app_igw",
            "aws_route_table.public_rt",
            "aws_subnet.public_subnet",
            "aws_vpc.app_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "app_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:442729101074:security-group/sg-069bbce724de555c2",
            "description": "Firewall for the application",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-069bbce724de555c2",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8080
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "CloudReactViteSpringApp-sg",
            "name_prefix": "",
            "owner_id": "442729101074",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "CloudReactViteSpringApp-sg"
            },
            "tags_all": {
              "Name": "CloudReactViteSpringApp-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-07d5633df6133eb2e"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "442729101074",
            "id": "sg-069bbce724de555c2",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.app_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:442729101074:subnet/subnet-0b47815e77b79799e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b47815e77b79799e",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "442729101074",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "CloudReactViteSpringApp-public-subnet"
            },
            "tags_all": {
              "Name": "CloudReactViteSpringApp-public-subnet"
            },
            "vpc_id": "vpc-07d5633df6133eb2e"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "442729101074",
            "id": "subnet-0b47815e77b79799e",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.app_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "app_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:442729101074:vpc/vpc-07d5633df6133eb2e",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0fe92373a57b9cac2",
            "default_route_table_id": "rtb-03b9e6ed4dc56e706",
            "default_security_group_id": "sg-0733854c4ae88e416",
            "dhcp_options_id": "dopt-0ebdf5f7ecc1e9419",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-07d5633df6133eb2e",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-03b9e6ed4dc56e706",
            "owner_id": "442729101074",
            "region": "us-east-1",
            "tags": {
              "Name": "CloudReactViteSpringApp-vpc"
            },
            "tags_all": {
              "Name": "CloudReactViteSpringApp-vpc"
            }
          },
          "identity_schema_version": 0
        }
      ]
    }
  ]
}